chapter13/httpproxy-traffic-mirror.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-traffic-mirror
  namespace: test
spec:
  virtualhost:
    fqdn: www.ilinux.io
  routes:
  - conditions:
    - prefix: /
    services:
    - name: demoappv11
      port: 80
    - name: demoappv12
      port: 80
      mirror: true
#流量镜像，V11是流量正常的版本，V12是一个镜像流量。虽然在访问的过程中都是访问V11但是，访问的请求V12也会复制一份一般用作生成环境上线前的流量测试是否正常。
