chapter13/httpproxy-traffic-splitting.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-traffic-splitting
  namespace: test
spec:
  virtualhost:
    fqdn: www.ilinux.io
  routes:
  - conditions:
    - prefix: /
    services:
    - name: demoappv11
      port: 80
      weight: 10
    - name: demoappv12
      port: 80
      weight: 90
#拆封流量，设定百分之十的流量给v11，百分之90的流量给V12，可以实现动态切分流量
