chapter13/ingress-demo01.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1  #v1版本组
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.ik8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp-deploy
            port: 
             number: 80
  tls:
  - hosts:
    - www.ik8s.io
    secretName: tls-demo
